--- a/fe/src/app/features/list-page/components/list-page-desktop-body/topic-category/topic-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/topic-category/topic-category.component.html
@@ -1,118 +1,20 @@
 <div class="wrapper">
-    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Tôn giáo
-        </div>
-    </div>
-    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Phong Thủy
-        </div>
-    </div>
-    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Phong Thủy
-        </div>
-    </div>
-    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Phong Thủy
-        </div>
-    </div>
-    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Phong Thủy
-        </div>
-    </div>
-    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Dân gian Đông Hồ
-        </div>
-    </div>
-    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Nhân vật Việt Nam
-        </div>
-    </div>
-    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Nhân vật thế giới
-        </div>
-    </div>
-    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Sự kiện Việt Nam
-        </div>
-    </div>
-    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Sự kiện thế giới
-        </div>
-    </div>    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Sự kiện thế giới
-        </div>
-    </div>    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Sự kiện thế giới
-        </div>
-    </div>    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Sự kiện thế giới
-        </div>
-    </div>    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Sự kiện thế giới
-        </div>
-    </div>    <div class="wrapper__accordion-group">
-        <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
-            alt="religion-picture" class="wrapper__accordion-group__img">
-        <div class="hover-effect-yellow-bright wrapper__accordion">
-            <input type="checkbox" (click)="addToFilter($event)">
-            Sự kiện thế giới
-        </div>
+
+    <div *ngFor="let x of categoryTopicList" class="wrapper__accordion-group">
+        <ng-template *ngIf="x.id == 1; else otherCondition">
+            <div (click)="toggleToFilter($event, { id: x.id, name: x.name, level2Id: -3 })"
+                class="hover-effect-yellow-bright wrapper__accordion">
+                {{ x.name }}
+            </div>
+        </ng-template>
+        <ng-template #otherCondition>
+            <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
+                alt="religion-picture" class="wrapper__accordion-group__img">
+            <div (click)="toggleToFilter($event, { id: x.id, name: x.name, level2Id: -3 })"
+                class="hover-effect-yellow-bright wrapper__accordion">
+                {{ x.name }}
+            </div>
+        </ng-template>
     </div>
 
     <div *ngIf="!isViewLoaded" class="father-wrapper">
