--- a/fe/src/app/features/list-page/components/list-page-desktop-body/style-category/style-category.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/style-category/style-category.component.css
@@ -50,7 +50,7 @@
 
 .wrapper__accordion i {
     transition: 0.21s ease-in-out;
-    border: 1px solid var(--dark-level2-border-color);
+    border: 1px solid transparent;
     border-radius: var(--border-radius-1);
     padding: 6px;
     position: absolute;
@@ -167,7 +167,7 @@
 
 .wrapper__accordion-group-special__classify-group__accordion i {
     transition: 0.21s ease-in-out;
-    border: 1px solid var(--dark-level2-border-color);
+    border: 1px solid transparent;
     border-radius: var(--border-radius-1);
     padding: 6px;
     position: absolute;
