--- a/fe/src/app/features/list-page/components/list-page-desktop-body/topic-category/topic-category.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/topic-category/topic-category.component.css
@@ -82,3 +82,22 @@
     width: 100%;
     background-color: var(--level2-color);
 }
+
+.wrapper__accordion-group.different {
+    display: flex;
+    gap: 6px;
+}
+
+.wrapper__accordion-group__item-all, .wrapper__accordion-group__item-else {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--dark-level2-border-color);
+    border-radius: var(--border-radius-1);
+}
+
+.wrapper__accordion-group__item-all.activated, .wrapper__accordion-group__item-else.activated {
+    color: var(--secondary-color);
+}
