--- a/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.html
@@ -1,28 +1,28 @@
 <div class="wrapper">
     <div *ngFor="let x of categorySubjectList" class="wrapper__accordion-group">
-        <div class="wrapper__accordion" id="level2{{x.level2Id}}">
-            <span class="hover-effect-yellow-bright">{{ x.level2Name }}</span>
+        <div class="wrapper__accordion" id="level2{{x.level2CategoryId}}">
+            <span class="hover-effect-yellow-bright">{{ x.level2CategoryName }}</span>
             <i class="wrapper__accordion__icon hover-effect-yellow-bright fa-solid fa-chevron-down"></i>
         </div>
         <div class="wrapper__panel">
             <div class="wrapper__panel__wrapper">
-                <div [ngClass]="{ 'activated': isCategoryTagSelected(0, x.level2Id) }"
-                    (click)="toggleToFilter($event ,{id: 0, name: 'Tất cả' + ' - ' + x.level2Name, level2Id: x.level2Id})"
+                <div [ngClass]="{ 'activated': isCategoryTagSelected(0, x.level2CategoryId) }"
+                    (click)="toggleToFilter($event ,{id: 0, name: 'Tất cả' + ' - ' + x.level2CategoryName, level2CategoryId: x.level2CategoryId})"
                     class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter all">
                     <span class="wrapper__panel__wrapper__tag-filter__content">Tất cả</span>
                 </div>
 
                 <div *ngFor="let y of x.level3List">
-                    <div *ngIf="y.name == 'Khác'; else otherCondition">
-                        <div [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2Id) }"
-                            (click)="toggleToFilter($event, {id: y.id, name: x.level2Name + ' - ' + y.name, level2Id: x.level2Id})"
+                    <div *ngIf="isContainsOther(y.name); else otherCondition">
+                        <div [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
+                            (click)="toggleToFilter($event, {id: y.id, name: x.level2Name + ' - ' + y.name, level2CategoryId: x.level2CategoryId})"
                             class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
-                            <span class="wrapper__panel__wrapper__tag-filter__content">{{ y.name }}</span>
+                            <span class="wrapper__panel__wrapper__tag-filter__content">Khác</span>
                         </div>
                     </div>
                     <ng-template #otherCondition>
-                        <div [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2Id) }"
-                            (click)="toggleToFilter($event, {id: y.id, name: y.name, level2Id: x.level2Id})"
+                        <div [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
+                            (click)="toggleToFilter($event, {id: y.id, name: y.name, level2CategoryId: x.level2CategoryId})"
                             class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
                             <span class="wrapper__panel__wrapper__tag-filter__content">{{ y.name }}</span>
                         </div>
