--- a/fe/src/app/features/list-page/components/list-page-desktop-body/topic-category/topic-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/topic-category/topic-category.component.html
@@ -1,12 +1,12 @@
 <div id="topic-wrapper" class="wrapper">
     <div class="wrapper__accordion-group different">
         <div [ngClass]="{ 'activated': isCategoryTagSelected(0, -3) }"
-            (click)="toggleToFilter($event, { id: 0, name: 'Tất cả - Chủ đề', level2Id: -3 })"
+            (click)="toggleToFilter($event, { id: 0, name: 'Tất cả - Chủ đề', level2CategoryId: -3 })"
             class="hover-effect-yellow-bright wrapper__accordion-group__item-all">
             Tất cả
         </div>
         <div [ngClass]="{ 'activated': isCategoryTagSelected(1, -3) }"
-            (click)="toggleToFilter($event, { id: 1, name: 'Chủ đề - Khác', level2Id: -3 })"
+            (click)="toggleToFilter($event, { id: 1, name: 'Chủ đề - Khác', level2CategoryId: -3 })"
             class="hover-effect-yellow-bright wrapper__accordion-group__item-else">
             Khác
         </div>
@@ -15,7 +15,7 @@
     <div *ngFor="let x of categoryTopicList" class="wrapper__accordion-group">
         <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
             alt="religion-picture" class="wrapper__accordion-group__img">
-        <div (click)="toggleToFilter($event, { id: x.id, name: x.name, level2Id: -3 })"
+        <div (click)="toggleToFilter($event, { id: x.id, name: x.name, level2CategoryId: -3 })"
             [ngClass]="{ 'activated': isCategoryTagSelected(x.id, -3) }"
             class="hover-effect-yellow-bright wrapper__accordion">
             {{ x.name }}
