--- a/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.html
@@ -12,23 +12,22 @@
                     <span class="wrapper__panel__wrapper__tag-filter__content">Tất cả</span>
                 </div>
 
-                <div *ngFor="let y of x.level3List">
-                    <div *ngIf="isContainsOther(y.name); else otherCondition">
-                        <div [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
-                            (click)="toggleToFilter($event, {id: y.id, name: x.level2Name + ' - ' + y.name, level2CategoryId: x.level2CategoryId})"
-                            class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
-                            <span class="wrapper__panel__wrapper__tag-filter__content">Khác</span>
+                    <div *ngFor="let y of x.level3List">
+                        <div *ngIf="isContainsOther(y.name); else otherCondition">
+                            <div [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
+                                (click)="toggleToFilter($event, {id: y.id, name: x.level2CategoryName + ' - ' + y.name, level2CategoryId: x.level2CategoryId})"
+                                class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
+                                <span class="wrapper__panel__wrapper__tag-filter__content">Khác</span>
+                            </div>
                         </div>
+                        <ng-template #otherCondition>
+                            <div [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
+                                (click)="toggleToFilter($event, {id: y.id, name: y.name, level2CategoryId: x.level2CategoryId})"
+                                class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
+                                <span class="wrapper__panel__wrapper__tag-filter__content">{{ y.name }}</span>
+                            </div>
+                        </ng-template>
                     </div>
-                    <ng-template #otherCondition>
-                        <div [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
-                            (click)="toggleToFilter($event, {id: y.id, name: y.name, level2CategoryId: x.level2CategoryId})"
-                            class="hover-effect-yellow-bright wrapper__panel__wrapper__tag-filter">
-                            <span class="wrapper__panel__wrapper__tag-filter__content">{{ y.name }}</span>
-                        </div>
-                    </ng-template>
-                </div>
-
             </div>
         </div>
     </div>
