--- a/fe/src/app/features/list-page/components/list-page-desktop-body/style-category/style-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/style-category/style-category.component.html
@@ -3,7 +3,7 @@
         <ng-container *ngIf="!hasDescription(x.level3List); else specialWrapper">
             <div class="wrapper__accordion-group">
                 <div class="wrapper__accordion">
-                    <span class="hover-effect-yellow-bright">{{x.level2Name}}</span>
+                    <span class="hover-effect-yellow-bright">{{x.level2CategoryName}}</span>
                     <i class="wrapper__accordion__icon hover-effect-yellow-bright fa-solid fa-chevron-down"></i>
                 </div>
                 <div class="wrapper__panel">
@@ -21,8 +21,8 @@
         <ng-template #specialWrapper>
             <div class="wrapper__accordion-group-special">
                 <div class="wrapper__accordion-group-special__classify-group">
-                    <div class="wrapper__accordion-group-special__classify-group__accordion">
-                        <span class="hover-effect-yellow-bright">{{x.level2Name}}</span>
+                    <div class="wrapper__accordion-group-special__classify-group__accordion toggle">
+                        <span class="hover-effect-yellow-bright">{{x.level2CategoryName}}</span>
                         <i class="hover-effect-yellow-bright wrapper__accordion__icon__special fa-solid fa-chevron-down"></i>
                     </div>
                     <div class="wrapper__accordion-group-special__classify-group__panel">
